2007-03-20 Jim Garlick <garlick@llnl.gov>

	* : tag scrub-1.9

	* progress.c : Fflush stdout in the batch case so progress
	can still be assessed by looking at log file [reported by Jim Harm].

2007-01-28 Jim Garlick <garlick@llnl.gov>

	* getsize.c : Handle > 2TB device size in Linux.

2007-01-18 Jim Garlick <garlick@llnl.gov>

	* scrub.c, scrub.1 : Changed default blocksize to 1M [Graham Smith].

	* getsize.c : Cleanup [Graham Smith].

2007-01-05 Jim Garlick <garlick@llnl.gov>

	* scrub.c : Add -r option to unlink file after scrub [Sean Morrison].

2006-12-28 Jim Garlick <garlick@llnl.gov>

	* getsize.c : Added getsize() implementation for hpux [Graham Smith].

2006-11-27 Jim Garlick <garlick@llnl.gov>

	* scrub.c : Refuse to scrub a zero length file (avoids
	assertion failure in progress.c) [Markus Schatzl].

2006-11-22 Jim Garlick <garlick@llnl.gov>

	* scrub.c : Change sprintf's to snprintf [Markus Schatzl].

2006-10-18 Jim Garlick <garlick@llnl.gov>

	* : add __hpux to large file ifdef

	* getsize.c : use sscanf("%llu") instead of strtoull for hpux
	portability.

2006-08-17 Jim Garlick <garlick@llnl.gov>

	* getsize.c: Fixed logic error in main (only affects test prog).

2006-08-16 Jim Garlick <garlick@llnl.gov>

	* NEWS: Renamed README.

	* scrub.c: Added -S option to skip writing scrub signature.

	* : tag scrub-1.8

2006-08-07 Jim Garlick <garlick@llnl.gov>

	* getsize.c: Added str2int().

	* scrub.c: Call str2int() to parse blocksize arg.

2006-08-04 Jim Garlick <garlick@llnl.gov>

	* scrub.spec: Minor change to support building RPM's on AIX.

	* : make error reporting more verbose all around.

2006-08-03 Jim Garlick <garlick@llnl.gov>

	* Makefile: Add CC, CFLAGS, LDADD for AIX compilers.

	* sig.c: Fix typo.

	* pad.c, sig.c: Add large file includes.

2006-07-28 Jim Garlick <garlick@llnl.gov>

	* sig.[ch]: Read/write even blocksize multiples for AIX.

2006-07-23 Jim Garlick <garlick@llnl.gov>

	* scrub.c: Emit a warning if off_t is not 64 bits.
